update mkdocs config

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,8 @@
 site_name: RingCentral SDK for Ruby
-
+site_url: https://github.com/grokify/ringcentral-sdk-ruby
+repo_url: https://github.com/grokify/ringcentral-sdk-ruby.git
+docs_dir: docs
+theme: readthedocs
 pages:
 # Introduction:
 - ['index.md', 'About', 'RingCentral SDK']
