--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 sudo: false
 cache: bundler
 language: ruby
+
 rvm:
   - 1.8.7
   - 1.9.3
@@ -9,3 +10,14 @@ rvm:
   - 2.1.6
   - 2.2.0
   - 2.2.2
+  - ruby-head
+  - jruby
+  - jruby-head
+  - rbx-2
+
+matrix:
+  fast_finish: true
+  allow_failures:
+    - rvm: ruby-head
+    - rvm: jruby-head
+    - rvm: rbx-2
