--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ rvm:
   - 2.0.0-p647
   - 2.0.0
   - 1.9.3
+  - 1.8.7
   - ruby
   - ruby-head
   - jruby
@@ -21,6 +22,7 @@ rvm:
 matrix:
   fast_finish: true
   allow_failures:
+    - rvm: 1.8.7
     - rvm: ruby-head
     - rvm: jruby-head
     - rvm: rbx-head
