--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,11 @@ rvm:
 matrix:
   fast_finish: true
   allow_failures:
+    - rvm: 1.9.3
     - rvm: 1.8.7
+    - rvm: ruby
     - rvm: ruby-head
+    - rvm: jruby
+    - rvm: jruby-19mode
     - rvm: jruby-head
     - rvm: rbx-head
