add subscriptions mkdocs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,3 +12,4 @@ pages:
 - ['usage/authorization/Authorization.md', 'User Guide', 'Authorization']
 - ['usage/messages/Call-Recordings.md', 'User Guide', 'Call Recordings']
 - ['usage/messages/Fax-Messages.md', 'User Guide', 'Fax Messages']
+- ['usage/notifications/Subscriptions.md', 'User Guide', 'Subscriptions']
