--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,7 @@ notifications:
   email:
     recipients:
       - johncwang@gmail.com
-      - rc_github@ringcentral.glip.com
     on_success: always
     on_failure: always
+  webhooks:
+    - https://zapier.com/hooks/catch/2y1h4a/
