--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,3 +24,4 @@ pages:
 
 ## Notifications:
 - ['usage/notifications/Subscriptions.md', 'Notifications', 'Subscriptions']
+- ['usage/notifications/Subscriptions-All-Extensions.md', 'Notifications', 'Subscribe to All Extensions']
