--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+Gemfile.lock
 coverage
 scripts/_*
 scripts/*.env
@@ -5,4 +6,6 @@ scripts/credentials.json
 scripts/credentials[0-9].json
 scripts/rc-credentials.json
 scripts/oauth2-sinatra/_*
+scripts/oauth2-sinatra/*.env
+scripts/oauth2-sinatra/Gemfile.lock
 *.gem
