add subscribe to new fax script

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ scripts/*.env
 scripts/Gemfile.lock
 scripts/credentials.json
 scripts/credentials[0-9].json
+scripts/env_test
 scripts/rc-credentials.json
 scripts/oauth2-sinatra/_*
 scripts/oauth2-sinatra/*.env
