--- a/.travis.yml
+++ b/.travis.yml
@@ -23,8 +23,9 @@ rvm:
 matrix:
   fast_finish: true
   allow_failures:
-    - rvm: 2.1.8
+    - rvm: 1.9.3
     - rvm: 1.8.7
+    - rvm: ruby
     - rvm: ruby-head
     - rvm: jruby
     - rvm: jruby-19mode
