--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,11 @@ rvm:
 matrix:
   fast_finish: true
   allow_failures:
+    - rvm: 2.2.0
+    - rvm: 2.1.8
+    - rvm: 2.1.0
+    - rvm: 2.0.0-p648
+    - rvm: 2.0.0
     - rvm: 1.9.3
     - rvm: 1.8.7
     - rvm: ruby
