--- a/.travis.yml
+++ b/.travis.yml
@@ -5,13 +5,7 @@ language: ruby
 rvm:
   - 2.3.0
   - 2.2.4
-  - 2.2.0
-  - 2.1.8
-  - 2.1.0
-  - 2.0.0-p648
-  - 2.0.0
-  - 1.9.3
-  - 1.8.7
+  - 2.2.2
   - ruby
   - ruby-head
   - jruby
@@ -23,18 +17,12 @@ rvm:
 matrix:
   fast_finish: true
   allow_failures:
-    - rvm: 2.2.0
-    - rvm: 2.1.8
-    - rvm: 2.1.0
-    - rvm: 2.0.0-p648
-    - rvm: 2.0.0
-    - rvm: 1.9.3
-    - rvm: 1.8.7
     - rvm: ruby
     - rvm: ruby-head
     - rvm: jruby
     - rvm: jruby-19mode
     - rvm: jruby-head
+    - rvm: rbx-2
     - rvm: rbx-head
 
 notifications:
