--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,8 @@ rvm:
   - ruby
   - ruby-head
   - jruby
+  - jruby-9.1.5.0
+  - jruby-9.0.5.0
   - jruby-19mode
   - jruby-head
   - rbx-2
@@ -20,6 +22,8 @@ matrix:
     - rvm: ruby
     - rvm: ruby-head
     - rvm: jruby
+    - rvm: jruby-9.1.5.0
+    - rvm: jruby-9.0.5.0
     - rvm: jruby-19mode
     - rvm: jruby-head
     - rvm: rbx-2
