--- a/.travis.yml
+++ b/.travis.yml
@@ -2,16 +2,17 @@ sudo: false
 cache: bundler
 language: ruby
 
+before_install:
+  - gem update bundler
+
 rvm:
-  - 2.3.0
+  - 2.3.1
   - 2.2.4
   - 2.2.2
   - ruby
   - ruby-head
-  - jruby
   - jruby-9.1.5.0
   - jruby-9.0.5.0
-  - jruby-19mode
   - jruby-head
   - rbx-2
   - rbx-head
@@ -21,10 +22,6 @@ matrix:
   allow_failures:
     - rvm: ruby
     - rvm: ruby-head
-    - rvm: jruby
-    - rvm: jruby-9.1.5.0
-    - rvm: jruby-9.0.5.0
-    - rvm: jruby-19mode
     - rvm: jruby-head
     - rvm: rbx-2
     - rvm: rbx-head
