--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ matrix:
   allow_failures:
     - rvm: ruby
     - rvm: ruby-head
+    - rvm: jruby-9.0.5.0
     - rvm: jruby-head
     - rvm: rbx-2
     - rvm: rbx-head
