--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -6,7 +6,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ruby: ['2.5', '2.6', '2.7', 'jruby-head', 'ruby-head']
+        ruby: ['3.3', '3.2', '2.5', '2.6', '2.7', 'jruby-head', 'ruby-head']
         gemfile: ['Gemfile']
         exclude:
           - ruby: 2.7
