lint: `rubocop`: fix various

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,11 +3,11 @@ AllCops:
     - 'scripts/**/*'
     - 'test/**/*'
 
+Layout/LineLength:
+  Max: 120
+
 Metrics/ClassLength:
   Max: 150
-
-Metrics/LineLength:
-  Max: 120
 
 Metrics/AbcSize:
   Max: 30
